Fixing overflow hero image

--- a/newstyle.css
+++ b/newstyle.css
@@ -3,6 +3,7 @@ html {
   height: 100%;
   width: 100%;
   margin: 0;
+  overflow-x: hidden;
 }
 
 * {
@@ -54,7 +55,6 @@ header a:hover {
 }
 .hero-container img {
   width: 130%;
-  max-width: 100vw;
   height: auto;
   display: block;
 }
