--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,7 @@ html {
   height: 100%;
   width: 100%;
   margin: 0;
+  overflow-x: hidden;
 }
 * {
   box-sizing: border-box;
@@ -59,7 +60,6 @@ header {
   width: 100%;
   img {
     width: 130%;
-    max-width: 100vw;
     height: auto;
     display: block;
   }
